<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".signIn">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/uheader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/welcome_to"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:layout_marginTop="@dimen/_4sdp"
                android:textSize="@dimen/_16ssp"
                android:text="@string/whatsapp"
                android:textColor="@color/white"/>

        </LinearLayout>

        <TextView
            android:id="@+id/signt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:includeFontPadding="false"
            app:layout_constraintTop_toBottomOf="@id/uheader"
            android:text="@string/sign_in"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_4sdp"
            app:layout_constraintTop_toBottomOf="@id/signt">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_4sdp">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:includeFontPadding="false"
                   android:layout_marginStart="@dimen/_8sdp"
                   android:layout_marginTop="@dimen/_8sdp"
                   android:layout_marginEnd="@dimen/_8sdp"
                   android:text="@string/email"
                   android:textSize="@dimen/_12sdp"
                   android:textColor="@color/black"/>

               <EditText
                   android:id="@+id/inputemail"
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/_30sdp"
                   android:layout_marginStart="@dimen/_8sdp"
                   android:layout_marginEnd="@dimen/_8sdp"
                   android:hint="@string/your_example_com"
                   android:imeOptions="actionNext"
                   android:importantForAutofill="no"
                   android:includeFontPadding="false"
                   android:inputType="textEmailAddress"
                   android:textColor="@color/black"
                   android:textColorHint="#9C9595"
                   android:textSize="@dimen/_13sdp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:text="@string/password"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/inputpass"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:hint="@string/u2022_u2022_u2022_u2022_u2022_u2022"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="#9C9595"
                    android:textSize="@dimen/_13sdp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:includeFontPadding="false"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/cardv"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/sign_in"
            android:textColor="@color/white"/>
        <ProgressBar
            android:id="@+id/btn"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            app:layout_constraintBottom_toBottomOf="@id/button"
            app:layout_constraintStart_toStartOf="@id/button"
            app:layout_constraintEnd_toEndOf="@id/button"
            app:layout_constraintTop_toTopOf="@id/button"/>

        <TextView
            android:id="@+id/noacc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_any_account"
            android:gravity="center"
            android:includeFontPadding="false"
            app:layout_constraintTop_toBottomOf="@id/button"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"/>
        <TextView
            android:id="@+id/msignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            app:layout_constraintTop_toBottomOf="@id/noacc"
            android:text="@string/sign_up"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_8sdp"/>



    </androidx.constraintlayout.widget.ConstraintLayout>





</ScrollView>