<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup">

    <LinearLayout
        android:id="@+id/uhead"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_back"
            app:tint="@color/white"
            android:contentDescription="@string/app_name" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/uhead"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:includeFontPadding="false"
                android:gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/we_need_few_details_to_get_your_account_ready"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_4sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_4sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:text="@string/first_name"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/black"/>
                    <EditText
                        android:id="@+id/inputname"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textColorHint="#9C9595"
                        android:textSize="@dimen/_13sdp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:text="@string/last_name"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/black"/>
                    <EditText
                        android:id="@+id/inputLast"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textColorHint="#9C9595"
                        android:textSize="@dimen/_13sdp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:text="@string/email"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/black"/>
                    <EditText
                        android:id="@+id/inpuemail"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:hint="@string/your_example_com"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textColorHint="#9C9595"
                        android:textSize="@dimen/_13sdp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:text="@string/password"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/black"/>
                    <EditText
                        android:id="@+id/inpupass"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:hint="@string/u2022_u2022_u2022_u2022_u2022_u2022"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="#9C9595"
                        android:textSize="@dimen/_13sdp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:text="@string/confirm_password"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/black"/>
                    <EditText
                        android:id="@+id/inputpass2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:hint="@string/u2022_u2022_u2022_u2022_u2022_u2022"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="#9C9595"
                        android:textSize="@dimen/_13sdp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonup"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    app:layout_constraintTop_toBottomOf="@id/card"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:includeFontPadding="false"/>
                <ProgressBar
                    android:id="@+id/pbar"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible"/>


            </FrameLayout>

            <TextView
                android:id="@+id/acc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:gravity="center"
                android:includeFontPadding="false"
                app:layout_constraintTop_toBottomOf="@id/buttonup"
                android:layout_marginTop="@dimen/_20sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"/>
            <TextView
                android:id="@+id/msignin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                app:layout_constraintTop_toBottomOf="@id/acc"
                android:text="@string/SIGN_IN"
                android:gravity="center"
                android:textColor="@color/red"
                android:textSize="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_8sdp"/>

        </LinearLayout>




    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>